--- a/source/sass/3-basics/_base.sass
+++ b/source/sass/3-basics/_base.sass
@@ -11,12 +11,12 @@ html
 
 
 body
-  //delete the background to apply your own style
-  background: #0d1218 url("../img/ep_naturalblack.png")
   font-size: 14px
   line-height: 1.6
-  font-size: 14px
+  font-size: 16px
   color: black
+  font-family: 'Oswald', sans-serif
+  font-weight: 400
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
 
