--- a/source/sass/3-basics/_buttons.sass
+++ b/source/sass/3-basics/_buttons.sass
@@ -4,19 +4,22 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"]
   display: inline-block
-  padding: 20px 60px
-  color: black
+  padding: 16px 32px
+  color: white
   text-align: center
   font-size: 14px
   font-weight: 600
   text-transform: uppercase
   text-decoration: none
   white-space: nowrap
-  background-color: white
+  background-color: $nba_red
   border-radius: 4px
   cursor: pointer
   box-sizing: border-box
   transition: all 0.2s ease
+  font-family: oswald
+  outline: none
+  border: 0
 
   &:hover,
   &:active,
