added container to footer

--- a/source/sass/4-layout/_nav.sass
+++ b/source/sass/4-layout/_nav.sass
@@ -13,8 +13,9 @@
   bottom: 0
   left: 0
   right: 0
-  display: flex
-  justify-content: space-between
+  .wrapper
+      display: flex
+      justify-content: space-between
 
 p
   color: $white
