--- a/source/sass/3-basics/_base.sass
+++ b/source/sass/3-basics/_base.sass
@@ -11,6 +11,7 @@ html
 
 
 body
+  background-color: $black
   font-size: 14px
   line-height: 1.6
   font-size: 16px
@@ -19,6 +20,7 @@ body
   font-weight: 400
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
+
 
 
 .wrapper
